--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     justify-content: center;
 }
 
+button {
+    margin-bottom: 30px;
+    border-radius: 10px;
+    text-align: center;
+}
 
 #gridContainer{
     display: grid;
